--- a/src/components/IconTileModal.module.scss
+++ b/src/components/IconTileModal.module.scss
@@ -53,7 +53,7 @@
   margin: 2rem 1rem 0 0;
   padding: 0.6rem 30px 0.6rem 50px;
   border-radius: 3px;
-  transition: background-color ease-in-out 0.3s;
+  transition: background-color ease-in-out 0.15s;
 
   &:hover {
     background-color: var(--link-color-dark);
