--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,20 +1,22 @@
 .box {
   background: #7a76de url(/gradient.jpg) no-repeat;
   background-size: cover;
-  padding: 1rem 1rem 3rem 1rem;
+  padding: 2rem 2rem 4rem 2rem;
   text-align: center;
   margin: 0 -1rem;
 
   h1 {
-    font-size: 2rem;
+    font-size: 1.75rem;
     opacity: 1;
     color: #fff;
+    line-height: 1.2;
   }
 
   h3 {
     font-size: 1rem;
     mix-blend-mode: multiply;
-    opacity: 0.5;
+    opacity: 0.6;
+    font-weight: 500;
   }
 
   span {
@@ -32,7 +34,7 @@
 
 .filterBox {
   display: flex;
-  margin: 1rem;
+  margin: 1rem 1rem -3rem 1rem;
   padding: 1rem;
 }
 
@@ -60,6 +62,7 @@
     padding: 4rem 4rem 5rem 4rem;
     border-radius: 0.5rem;
     margin: 0;
+    background-image: url(/gradient-icons.png), url(/gradient.jpg) ;
 
     h1 {
       font-size: 2.4rem;
@@ -77,6 +80,10 @@
 
   .filterBoxInput {
     width: 80%;
+  }
+
+  .filterBox {
+    margin: 1rem 1rem -2.5rem 1rem;
   }
 
 }
